--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-2.8.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <!-- <script src="src/Song.js"></script> -->
+  <script src="src/Field.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <!-- <script src="spec/PlayerSpec.js"></script> -->
+  <script src="spec/FieldSpec.js"></script>
 
 </head>
 
