--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,11 +14,13 @@
   <!-- include source files here... -->
   <script src="src/Field.js"></script>
   <script src="src/Player.js"></script>
+  <script src="src/Grid.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/FieldSpec.js"></script>
   <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/GridSpec.js"></script>
 
 </head>
 
